# syncer

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
client/: __init__.py  main.py  sync_engine.py  watcher.py
docs/: PRE_COMMIT_FEATURES.md  README.md  client_main.md  client_sync_engine.md  client_watcher.md  server_file_manager.md  server_main.md  server_websocket_manager.md  shared_models.md  shared_protocols.md  shared_utils.md
server/: __init__.py  file_manager.py  main.py  websocket_manager.py
shared/: __init__.py  compression.py  diff.py  exceptions.py  metrics.py  models.py  protocols.py  utils.py
tests/: __init__.py  conftest.py
tests/e2e/: test_complete_sync_flow.py  test_real_world_scenarios.py
tests/integration/: test_file_manager.py  test_sync_engine.py  test_websocket_manager.py
tests/unit/shared/: test_compression.py  test_diff.py  test_metrics.py  test_models.py  test_utils.py
