[project]
name = "syncer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "aiohttp",
    "pydantic",
    "pyyaml",
    "websockets",
    "click",
    "watchdog",
    "aiosqlite",
    "aiofiles",
    "psutil",
    "lz4",
    "xxhash",
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "interrogate>=1.7.0",
    "perflint>=0.8.1",
    "pre-commit>=4.2.0",
    "radon>=6.0.1",
    "vulture>=2.14",
]
